# memsanity

./: Cargo.toml  README.md  docker-compose.yml
examples/concept/: README.md  memcached-advanced.yaml  memcached-core.yaml  minimal.yaml  proxy-memcached-smoke.yaml
src/: engine.rs  main.rs
src/config/: loader.rs  schema.rs
src/core/: client.rs  mod.rs
src/drivers/: memcached.rs  mod.rs  noop.rs
